ZODB Requires:
~~~~~~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- P1 #69: filter list of roles in folder_localrole_form
- P1 #76: boxes action is available only for manager

New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- code review indentation and spacing