@@ -8,6 +8,7 @@ Bug fixes:
 ~~~~~~~~~~
 - P1 #69: filter list of roles in folder_localrole_form
 - P1 #76: boxes action is available only for manager
+- P1 #80: remove test users user1 and user2 from cpsinstall
 
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
